<resources>
    <string name="app_name" translatable="false">AwesomeWallpaper</string>
    <string name="app_name_header" translatable="false">Awesome Wallpaper</string>
    <string name="love" translatable="false">Love</string>
    <string name="juice" translatable="false">Juice</string>
    <string name="music" translatable="false">Music</string>
    <string name="all" translatable="false">All</string>
    <string name="ocean" translatable="false">Ocean</string>
    <string name="flowers" translatable="false">Flowers</string>
    <string name="cake" translatable="false">Cake</string>
    <string name="nature" translatable="false">Nature</string>
    <string name="animal" translatable="false">Animal</string>
    <string name="birds" translatable="false">Birds</string>
    <string name="wild" translatable="false">Wild</string>
    <string name="cool" translatable="false">Cool</string>
    <string name="watch" translatable="false">Watch</string>
    <string name="car" translatable="false">Car</string>
    <string name="bike" translatable="false">Bike</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="download_image">Download Image</string>
    <string name="back">Back</string>
    <string name="share">Share</string>
    <string name="no_wallpapers_available">No Wallpapers Available</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <string name="logout">Logout</string>
</resources>