<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black"
    android:id="@+id/lay">

    <!-- App Name and Logout Button Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:background="@drawable/border_3d"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/app_name_header"
            android:textSize="20sp"
            android:paddingStart="40dp"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/btn_logout"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_logout"
            android:scaleType="centerInside"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="4dp"
            android:contentDescription="@string/logout"
            app:tint="@color/white" />
    </LinearLayout>

    <!-- Search Bar -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="Search Wallpapers"
        app:defaultQueryHint="Search wallpapers"
        android:layout_margin="8dp"
        android:iconifiedByDefault="false"
        android:background="@drawable/item_button_radius"
        android:queryBackground="@android:color/white" />

    <!-- Horizontal Scroll for Categories -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp">

        <LinearLayout
            android:id="@+id/categoryLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_all"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_shape"
                android:text="@string/all"
                android:textColor="@color/white"/>

            <View
                android:layout_width="10dp"
                android:layout_height="40dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ocean"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_shape"
                android:text="@string/ocean"
                android:textColor="@color/white"/>

            <View
                android:layout_width="10dp"
                android:layout_height="40dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_flowers"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_shape"
                android:text="@string/flowers"
                android:textColor="@color/white"/>

            <View
                android:layout_width="10dp"
                android:layout_height="40dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cake"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_shape"
                android:text="@string/cake"
                android:textColor="@color/white"/>

            <View
                android:layout_width="10dp"
                android:layout_height="40dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_nature"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_shape"
                android:text="@string/nature"
                android:textColor="@color/white"/>

            <View
                android:layout_width="10dp"
                android:layout_height="40dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_animal"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_shape"
                android:text="@string/animal"
                android:textColor="@color/white"/>

            <View
                android:layout_width="10dp"
                android:layout_height="40dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_birds"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_shape"
                android:text="@string/birds"
                android:textColor="@color/white"/>

            <View
                android:layout_width="10dp"
                android:layout_height="40dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_wild"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_shape"
                android:text="@string/wild"
                android:textColor="@color/white"/>

            <View
                android:layout_width="10dp"
                android:layout_height="40dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cool"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_shape"
                android:text="@string/cool"
                android:textColor="@color/white"/>

            <View
                android:layout_width="10dp"
                android:layout_height="40dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_love"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_shape"
                android:text="@string/love"
                android:textColor="@color/white"/>

            <View
                android:layout_width="10dp"
                android:layout_height="40dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_juice"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_shape"
                android:text="@string/juice"
                android:textColor="@color/white"/>

            <View
                android:layout_width="10dp"
                android:layout_height="40dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_music"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_shape"
                android:text="@string/music"
                android:textColor="@color/white"/>

            <View
                android:layout_width="10dp"
                android:layout_height="40dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_watch"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_shape"
                android:text="@string/watch"
                android:textColor="@color/white"/>

            <View
                android:layout_width="10dp"
                android:layout_height="40dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_car"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_shape"
                android:text="@string/car"
                android:textColor="@color/white"/>

            <View
                android:layout_width="10dp"
                android:layout_height="40dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_bike"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:background="@drawable/btn_shape"
                android:text="@string/bike"
                android:textColor="@color/white"/>
        </LinearLayout>
    </HorizontalScrollView>

    <!-- RecyclerView for Images -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="8dp"/>

    <!-- ProgressBar for loading -->
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:visibility="gone"/>

    <!-- TextView for "No wallpapers available" -->
    <TextView
        android:id="@+id/no_wallpapers_text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/no_wallpapers_available"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"/>

</LinearLayout>